# xkcd_2021_checkbox

./: Cargo.toml  README.md
src/: checkbox.rs  main.rs  morse.rs
