[package]
name = "xkcd_2021_checkbox"
description = "Interface for XKCD's 2021 April Fools Comic"
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/xkcd_2021_checkbox"
edition = "2018"

[dependencies]
thiserror = "1"
once_cell = "1"
console = "0.14"
attohttpc = "0.16"
